--- a/02-intro_to_r-joshua/02-A_First_R_Session.ipynb
+++ b/02-intro_to_r-joshua/02-A_First_R_Session.ipynb
@@ -4,13 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A System of Linear Equations\n",
+    "### Create a vector\n",
     "\n",
-    "Consider the system of equations:\n",
-    "\n",
-    "$$y = 3x - 2$$\n",
-    "\n",
-    "$$y = -5x + 6$$"
+    "Create a vector containing $3, 2, 5, 1, 1$ and assign it to the variable `xx`."
    ]
   },
   {
@@ -18,80 +14,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "xx = seq(-1, 2, by=.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yy1 <- 3*xx - 2\n",
-    "yy2 <- -5*xx + 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(repr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "options(repr.plot.width=12, repr.plot.height=6)\n",
-    "plot(xx, yy1, ylim=c(-10,20), xlim=c(-1,2))\n",
-    "points(xx, yy2)\n",
-    "abline(h=0); abline(v=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Solution\n",
-    "\n",
-    "The solution to this system of equations is a hyperplane in one less dimension than the two equations. Each equation is a line, a 1-D hyperplane. The hyperplane describing their intersection is a point a 0-D hyperplane.\n",
-    "\n",
-    "### Find the Solution Analytically"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "### Display the vector `xx` "
    ]
   },
   {
@@ -99,13 +28,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "options(repr.plot.width=12, repr.plot.height=6)\n",
-    "plot(xx, yy1, ylim=c(-10,20), xlim=c(-1,2), col=\"red\")\n",
-    "points(xx, yy2, col=\"green\")\n",
-    "# plot the solution \n",
-    "points(1, 1, col=\"blue\")\n",
-    "abline(h=0); abline(v=0)"
+    "### Create and display a vector\n",
+    "\n",
+    "Create a vector containing all of the values of `xx` and the values $4,4$ in that order. Assign it to the variable `qq` and display `qq`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing Vectors\n",
+    "\n",
+    "Display the third value of the vector `xx`.\n",
+    "\n",
+    "Assign the second to the fourth values of `xx` and assign to the vector `pp`. Display `pp`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display the mean and the standard deviation of `qq`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display the mean value of the \"LakeHuron\" dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display a histogram of the \"LakeHuron\" dataset"
    ]
   },
   {
