--- a/06-project-2/01-breast_cancer.ipynb
+++ b/06-project-2/01-breast_cancer.ipynb
@@ -1,16 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# A System of Linear Equations\n",
-    "\n",
-    "Consider the system of equations:\n",
-    "\n",
-    "$$y = 3x - 2$$\n",
-    "\n",
-    "$$y = -5x + 6$$"
+    "# install.packages(\"mlbench\")"
    ]
   },
   {
@@ -19,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xx = seq(-1, 2, by=.1)"
+    "library(mlbench)"
    ]
   },
   {
@@ -28,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xx"
+    "data(BreastCancer)"
    ]
   },
   {
@@ -37,8 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yy1 <- 3*xx - 2\n",
-    "yy2 <- -5*xx + 6"
+    "dim(BreastCancer)\n",
+    "levels(BreastCancer$Class)\n",
+    "head(BreastCancer)"
    ]
   },
   {
@@ -47,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(repr)"
+    "BreastCancer$Class <- as.integer(BreastCancer$Class == 'malignant')"
    ]
   },
   {
@@ -56,42 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "options(repr.plot.width=12, repr.plot.height=6)\n",
-    "plot(xx, yy1, ylim=c(-10,20), xlim=c(-1,2))\n",
-    "points(xx, yy2)\n",
-    "abline(h=0); abline(v=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The Solution\n",
-    "\n",
-    "The solution to this system of equations is a hyperplane in one less dimension than the two equations. Each equation is a line, a 1-D hyperplane. The hyperplane describing their intersection is a point a 0-D hyperplane.\n",
-    "\n",
-    "### Find the Solution Analytically"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "BreastCancer$Id <- NULL"
    ]
   },
   {
@@ -100,12 +62,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "options(repr.plot.width=12, repr.plot.height=6)\n",
-    "plot(xx, yy1, ylim=c(-10,20), xlim=c(-1,2), col=\"red\")\n",
-    "points(xx, yy2, col=\"green\")\n",
-    "# plot the solution \n",
-    "points(1, 1, col=\"blue\")\n",
-    "abline(h=0); abline(v=0)"
+    "BreastCancer <- na.omit(BreastCancer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs(BreastCancer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(ggplot2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist(BreastCancer$Class, freq = FALSE)\n",
+    "lines(density(BreastCancer$Class))"
    ]
   },
   {
